[package]
name = "stm32-lcd-i2c"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = {version = "0.4.0", features = ["defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any"]}
embassy-time = {version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = {version = "0.7.6", features = ["inline-asm", "critical-section-single-core"]}
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"

[profile.release]
debug = 2
